--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,9 @@
 	<title>郭家瑋簡介</title>
 </head>
 <body>
-	郭家瑋
+	<h1>郭家瑋</h1>
 
-	電話:0961228014
-	E-Mail: s1101684@gm.pu.edu.tw
+	電話:0961228014<br>
+	E-Mail: s1101684@gm.pu.edu.tw<br>
 </body>
 </html>
