--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>郭家瑋</h1>
 
-	電話:0961228014<br>
-	E-Mail: s1101684@gm.pu.edu.tw<br>
+	電話:<a href="tel:0961228014">0961228014</a><br>
+	E-Mail:<a href="s1101684@pu.edu.tw">s1101684@gm.pu.edu.tw</a><br>
 </body>
 </html>
