--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,19 @@
 	<title>郭家瑋簡介</title>
 </head>
 <body>
+	<img src="A.jpg"></img>
 	<h1>郭家瑋</h1>
 
 	電話:<a href="tel:0961228014">0961228014</a><br>
 	E-Mail:<a href="s1101684@pu.edu.tw">s1101684@gm.pu.edu.tw</a><br>
+
+	遊戲王5Ds ClearMind.mp3<br>
+	<audio controls>
+		<source src="遊戲王5Ds ClearMind.mp3" type="audio/mP3">
+	</audio><br>
+
+	一般打到這裏就投降了【水無月菌】<br>
+
+	<iframe src="https://www.youtube.com/embed/=PsvSV-jJIyQ" allowfullscreen></iframe>
 </body>
 </html>
