--- a/aboutme.html
+++ b/aboutme.html
@@ -6,19 +6,34 @@
 	<title>郭家瑋簡介</title>
 </head>
 <body>
-	<img src="A.jpg"></img>
+	<table width="70%">
+	<tr>
+	<td>
+	<img src="A.jpg" width="110%"></img>
+</td>
+	<td>
 	<h1>郭家瑋</h1>
-
+</td>
+</tr>
+<table width="70%" border="1">
+	<tr>
+		<td>
 	電話:<a href="tel:0961228014">0961228014</a><br>
 	E-Mail:<a href="s1101684@pu.edu.tw">s1101684@gm.pu.edu.tw</a><br>
+</td>
 
+<td>
 	遊戲王5Ds ClearMind.mp3<br>
 	<audio controls>
 		<source src="遊戲王5Ds ClearMind.mp3" type="audio/mP3">
 	</audio><br>
+</td>
 
+<td>
 	一般打到這裏就投降了【水無月菌】<br>
-
 	<iframe src="https://www.youtube.com/embed/=PsvSV-jJIyQ" allowfullscreen></iframe>
+</td>
+</tr>
+</table>
 </body>
 </html>
