--- a/aboutme.html
+++ b/aboutme.html
@@ -10,15 +10,28 @@
 		h2 {color:#33ff33; font-size:40px;}
 	</style>
 
+	<script>
+		function change1() {
+  			document.getElementById("pic").src = "B.jpg";
+  			document.getElementById("h2text").innerText = "靜宜資管";
+		}
+
+		function change2() {
+  			document.getElementById("pic").src = "A.jpg";
+  			document.getElementById("h2text").innerText = "JIA-WEI KUO";
+		}
+	</script>
+
 </head>
 <body>
 	<table width="70%">
 	<tr>
 	<td>
-	<img src="A.jpg" width="110%"></img>
+	<img src="A.jpg" width="110%" id="pic" onmouseover="change1()" onmouseout="change2()"></img>
 </td>
 	<td>
 	<h1>郭家瑋</h1>
+	<h2 id="h2text">JIA-WEI KUO</h2>
 </td>
 </tr>
 <table width="70%" border="1">
