--- a/aboutme.html
+++ b/aboutme.html
@@ -50,7 +50,7 @@
 
 <td>
 	一般打到這裏就投降了【水無月菌】<br>
-	<iframe src="https://www.youtube.com/embed/=PsvSV-jJIyQ" allowfullscreen></iframe>
+	<iframe src="https://www.youtube.com/embed/PsvSV-jJIyQ" allowfullscreen></iframe>
 </td>
 </tr>
 </table>
